objects/Forecast_SnapShot__c.object
<CustomObject>
    <fields>
        <fullName>Centerm__c</fullName>
        <label>Centermark Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centermark_Fee_Per_Location__c</fullName>
        <label>Centermark Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Centermark_of_Locations__c</fullName>
        <label>Centermark # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Monthly_Total_Spend__c</fullName>
        <label>Corporate Monthly Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporate_Spend_Weighted_Forecast__c</fullName>
        <label>Corporate Spend Weighted Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Cost__c</fullName>
        <label>Custom Implementation Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Contract_Length__c</fullName>
        <label>Display Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_Weighted_Forecast__c</fullName>
        <label>IL Weighted Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Record Type</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forecast Snapshots (Opportunity Record Type)</relationshipLabel>
        <relationshipName>Forecast_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forecast Snapshots</relationshipLabel>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPC_Contract_Length__c</fullName>
        <label>PPC Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_to_Close__c</fullName>
        <label>Percent to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Per_Location__c</fullName>
        <label>Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value_Corporate_Spend__c</fullName>
        <label>Total Contract Value - Corporate Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Corporate_Funded_Monthly_PPC_Budge__c</fullName>
        <label>Total Corporate Funded Monthly PPC Budge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Display_Budget__c</fullName>
        <label>Total Monthly Display Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Network_Adoption_Value__c</fullName>
        <label>Total Network Adoption Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Corporate_Monthly_Total_Spend__c + Total_Network_Adoption_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Weighted_Forecast_Monthly_Spend__c</fullName>
        <label>Total Weighted Forecast - Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total Network Adoption Monthly Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website_Template_Fee__c</fullName>
        <label>Website Template Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yodle_Web_Contract_Length__c</fullName>
        <label>Yodle Web Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yodle_Web_Fee_Per_Location__c</fullName>
        <label>Yodle Web Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yodle_Web_Setup_of_Locations__c</fullName>
        <label>Yodle Web/Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast Snapshot</label>
    <nameField>
        <label>Forecast SnapShot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Rogers_Support_Forecast_SnapShot</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_Forecast_SnapShot</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>